<resources>
    <string name="app_name">Corona Tracker</string>
    <string name="MyPageButton">My page </string>
    <string name="Covid_state" translatable="false">Covid state</string>
    <string name="LanguageButton">Language</string>
    <string name="LogOutButton">Log out</string>
    <string name="LogInButton">Log in</string>
    <string name="SignUpButton">Sign up</string>
    <string name="BookTimeButton">Book Time</string>
    <string name="ReBookTimeButton">Rebook Time</string>
    <string name="CancelTimeButton">Cancel Time</string>
    <string name="BookedTimeButton">Booked Time</string>
    <string name="DigitalPassButton">Digital Passport</string>
    <string name="PassWordLogInText">Password</string>
    <string name="EmailLogInText">Username or Email</string>
    <string name="FirstNameSignUpHint">First Name</string>
    <string name="LastNameSignUpHint">Last Name</string>
    <string name="EmailSignUpHint">Email</string>
    <string name="PassSignUpHint">Password</string>
    <string name="DateSignUpHint">Date of Birth</string>
    <string name="MobileSignUpHint">Mobile Number</string>
    <string name="CountrySignUpHint">Country</string>
    <string name="CitySignUpHint">City</string>
    <string name="ForgotPassword">ForgotPassword</string>
    <string name="userregistered">New User has been registered</string>

    <string-array name="Country_array">
        <item>Country</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Malta</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
    </string-array>

    <string-array name="Age_array">
        <item>Age</item>
        <item>ALL</item>
        <item>Age18_24</item>
        <item>Age25_49</item>
        <item>Age50_59</item>
        <item>Age60_69</item>
        <item>Age70_79</item>
        <item>Age80+</item>
    </string-array>

    <string-array name="Product_array">
        <item>Product</item>
        <item>ALL</item>
        <item>MOD</item>
        <item>COM</item>
        <item>AZ</item>
    </string-array>

    <string-array name="region_sweden">
        <item>| Sverige |</item>
        <item>Stockholm</item>
        <item>Uppsala</item>
        <item>Södermanland</item>
        <item>Östergötland</item>
        <item>Jönköping</item>
        <item>Kronoberg</item>
        <item>Kalmar</item>
        <item>Gotland</item>
        <item>Blekinge</item>
        <item>Skåne</item>
        <item>Halland</item>
        <item>Västra Götaland</item>
        <item>Värmland</item>
        <item>Örebro</item>
        <item>Västmanland</item>
        <item>Dalarna</item>
        <item>Gävleborg</item>
        <item>Västernorrland</item>
        <item>Jämtland</item>
        <item>Västerbotten</item>
        <item>Norrbotten</item>
    </string-array>

    <string-array name="Age_arraySE">
        <item>Age</item>
        <item>Totalt</item>
        <item>16-17</item>
        <item>18-29</item>
        <item>30-39</item>
        <item>40-49</item>
        <item>50-59</item>
        <item>60-69</item>
        <item>70-79</item>
        <item>80-89</item>
        <item>90+</item>
    </string-array>
    <string-array name="Doss_array">
        <item>Doss</item>
        <item>Doss1</item>
        <item>Doss2</item>
    </string-array>



    <string name="action_settings" translatable="false">something here</string>
    <string name="Doses_distrbuted">Doss Distrubed</string>
    <string name="Doses_adminstrated">Doses adminstrated</string>

</resources>