<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageAcitvity">




    <Button
        android:id="@+id/bookTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/BookTimeButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/rebookTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ReBookTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/bookTimeButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/cancelTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CancelTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/rebookTimeButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/bookedTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/BookedTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/cancelTimeButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/digitalPassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/DigitalPassButton"
        app:layout_constraintTop_toBottomOf="@+id/bookedTimeButton"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>